# predictions-market

./: .gitignore  README.md  prediction-market.json  windows.data
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  metadata.ts  page.tsx
frontend/src/app/create/: page.tsx
frontend/src/app/markets/: page.tsx
frontend/src/app/markets/[id]/: page.tsx
frontend/src/components/: ClientLayout.tsx  MarketList.tsx  Navbar.tsx
frontend/src/contexts/: MarketContext.tsx  WalletContext.tsx
frontend/src/contracts/: token.ts  token_splitter.ts
frontend/src/hooks/: useCreateMarket.ts  useMarketActions.ts  useToken.ts  useTokenSplitter.ts  useWallet.tsx
frontend/src/types/: market.ts  wallet.ts
python3/: README.md  config.py  doubleauction.py  gamble.py  indexer.py  initprediction.py  logger.py  monitor.py  pbccontract.py  serializedstate.py  tokensplitter.py  tokenv2.py  windowsupdater.py
rust/: Cargo.toml  README.md
rust/double-auction/: Cargo.toml  README.md  lib.rs
rust/double-auction/src/: lib.rs
rust/tests/: tests.rs
rust/tests/double-auction/: tests.rs
rust/tests/token-splitter/: tests.rs
rust/token-splitter/: Cargo.toml  README.md  lib.rs  package-lock.json
rust/token-splitter/src/: lib.rs
